edited with of bar and horizontal chart and also solved the scroll display on firefox

--- a/src/assets/scss/components/_categorieslayout.scss
+++ b/src/assets/scss/components/_categorieslayout.scss
@@ -1,5 +1,8 @@
 .division-logger {
     border: 0.5px solid $silver;
     margin: 2rem auto 3rem;
-    width: 85%
+    width: 100%;
+}
+.tags-container{
+    scrollbar-width: none;
 }
